# wakewordlab

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
scripts/: gen_key.py
wakewordlab/: __init__.py  audio.py  detector.py  models.py  vad.py
wakewordlab/_loader/: __init__.py  _fallback.py  key.h  loader.c  loader.pyx
wyoming_wakewordlab/: Dockerfile  __main__.py  docker-compose.yml  handler.py  test_client.py
