[build-system]
requires = ["setuptools>=68", "wheel", "cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "wakewordlab"
version = "0.1.0"
description = "On-device wake word detection"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.16",
    "soundfile>=0.12",
    "requests>=2.28",
    "scipy>=1.10",
    "cryptography>=41.0",
]

[project.optional-dependencies]
mic = ["sounddevice>=0.4.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wakewordlab*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux*"
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
